--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "vscode-sql-tagged-template-literals",
   "displayName": "SQL tagged template literals",
   "description": "Syntax highlighting for SQL in template literals tagged with `sql` function",
-  "version": "0.0.4",
+  "version": "1.0.0",
   "license": "MIT",
-  "publisher": "frigus02",
+  "publisher": "thetrompf",
   "repository": {
     "type": "git",
-    "url": "https://github.com/frigus02/vscode-sql-tagged-template-literals"
+    "url": "https://github.com/thetrompf/vscode-sql-tagged-template-literals"
   },
   "engines": {
     "vscode": "^1.34.0"
